# libefi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  license.txt  readme.md
api/: efi.h  efi_status.h
api/amd64/: cpu.h
api/arm/: cpu.h
api/ia32/: cpu.h
api/protocol/: efi_device_path.h  efi_file.h  efi_file_protocol.h  efi_graphics_output.h  efi_hii_database.h  efi_loaded_image.h  efi_simple_file_system.h  efi_simple_text_in.h  efi_simple_text_out.h  efi_unicode_collation.h
bitfont/: Makefile  bitfont.c  fbterm.c  fbterm.h  font.h  runqemu.sh
bitfont/hdd/: NvVars
cmake/: toolchain.cmake
efiapi/ia32/: cpu.h
efiapi/protocol/: efi_device_path.h  efi_graphics_output.h  efi_loaded_image.h  efi_simple_text_out.h
efiutil/: Makefile  efiutil.c  print.c  string.c  util.c
efiutil/include/: efiutil.h  khelper.h
hello/: Makefile
include/: efiutil.h
libs/: CMakeLists.txt
libs/efiapi/: CMakeLists.txt  efi.h  efi_inttypes.h  efi_status.h
libs/efiutil/: CMakeLists.txt  print.c
loadlin/: Makefile
progs/: CMakeLists.txt
progs/bitfont/: CMakeLists.txt  Makefile  bitfont.c  fbterm.c  fbterm.h  font.h
progs/dumpvar/: CMakeLists.txt  Makefile  dumpvar.c
progs/echo/: Makefile  echo.c
progs/hello/: CMakeLists.txt  Makefile  hello.c
progs/loadlin/: CMakeLists.txt  Makefile  bootparam.h  loadlin.c  readme.md
tools/: Makefile-i386.efi  Makefile-x86_64.efi  Makefile.efi  i386-efi.ld  ia-32-efi.ld  x86_64-efi.ld
uemu/: .gitignore  Makefile  efiemu.c  gopemu.c  pe32.h  readme.md  uemu  uemu.c
util/: runprog.sh
(+26 files in other folders)
